build: add caminho do server backend no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   server:
     build: ./server-app
     container_name: server-app
+    volumes:
+      - ./server-app:/app
     ports:
       - "6000:6000"
     network_mode: host 
